fixed mobile menu overflow issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,6 +52,7 @@
 }
 
 @media screen and (max-width: 768px) {
+
     .NavBarItems {
         position: relative;
         height: 125px;
@@ -61,23 +62,22 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 200px;
-        position: absolute;
+        position: fixed;
         top: 125px;
-        left: -100%;
+        right: -100%;
         opacity: 1;
         transition: all 0.3s ease;
         background:  rgb(0, 0, 0);
         text-align: center;
+        transform: translateX(0);
     }
 
     .nav-menu.active {
         background:  rgb(0, 0, 0);
-        left: 0;
+        right: 0;
         opacity: 1;
         transition: all 0.3s ease;
         width: 50%;
-        border-radius: 0 4px 4px 0;
         text-align: center;
     }
 
